#
# CMakeLists.txt
#
# Copyright (C) 2023 Mateusz Stadnik <matgla@live.com>
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.
#

add_subdirectory(calculate_floating_point)
# add_subdirectory(calculate_of_sine_of_extern_values)
# add_subdirectory(print_hello_world)
# add_subdirectory(print_hello_world_using_external_symbols)
# add_subdirectory(report_failure_for_wrong_file) 
# add_subdirectory(return_value)
# add_subdirectory(support_for_cpp_classes)
# add_subdirectory(import_simple_library)
