#
# CMakeLists.txt
#
# Copyright (C) 2024 Mateusz Stadnik <matgla@live.com>
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.
#

add_library(baselibc_variables STATIC)

target_sources(
  baselibc_variables
  PUBLIC globals.h
  PRIVATE globals.c)

target_link_libraries(baselibc_variables
                      PRIVATE test::st::cortex_m0_plus::nucleo_f091rc)

find_package(baselibc REQUIRED)

target_include_directories(
  baselibc_variables
  PRIVATE ${baselibc_SOURCE_DIR}/include
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
